@@ -56,61 +56,90 @@ public final class MvcInvocation {
 	/**
 	 * Pattern to detect a variable in a url string
 	 */
-	static private final Pattern search = Pattern.compile("\\{([a-zA-Z0-9\\-_]+)\\}");
+	static private final Pattern SEARCH = Pattern.compile("\\{([a-zA-Z0-9\\-_]+)\\}");
 
 	/**
 	 * Regular expressions to be applied to a URL to see if it matches
 	 * It bascially is the @{@link RequestMapping} URL like /foo-{bar}/plop to /foo-[^/]+/plop
 	 */
-	private ArrayList<Pattern> patterns = new ArrayList<>();
+	private final List<Pattern> patterns = new ArrayList<>();
 
 	/**
 	 * The Annotation of a controller's method
 	 */
-	private @CheckForNull RequestMapping mapping;
+	private final @CheckForNull RequestMapping mapping;
 
 	/**
 	 * All fetchers for each arguments of the method
 	 */
-	private ArgumentFetcher<?>[] fetchers;
+	private final ArgumentFetcher<?>[] fetchers;
 
 	/**
 	 * The method of this Invocation
 	 */
-	private Method method;
+	private final Method method;
 
-	/**
-	 * The instance getter of this Invocation
-	 */
-	private InstanceGetter<?> ig;
+	private final @CheckForNull View view;
 
-	private @CheckForNull View view;
+	private final @CheckForNull Writes writes;
 
-	private @CheckForNull Writes writes;
+	private final @CheckForNull HttpError httpError;
 
-	private @CheckForNull HttpError httpError;
-
-	private @CheckForNull Redirects redirects;
+	private final @CheckForNull Redirects redirects;
 
 	/**
 	 * The reference of each path variable name and their position in the url regex
 	 */
-	private HashMap<String, Integer> matchRef = new HashMap<>();
+	private final Map<String, Integer> matchRef = new HashMap<>();
 
-	private ControllerHandler<?> controller;
+	private final ControllerHandler<?> controller;
+
+	private <T> ArgumentFetcher<T> createFetcher(final TypeLiteral<T> type, final Annotation[] annotations) {
+		final AnnotatedElement annos = Annotations.fromArray(annotations);
+
+		final RequestParam requestParam = annos.getAnnotation(RequestParam.class);
+		if (requestParam != null) {
+			return new RequestParamArgumentFetcher<>(type, annotations, requestParam);
+		}
+
+		final PathVariable pathVariable = annos.getAnnotation(PathVariable.class);
+		if (pathVariable != null) {
+			return new PathVariableArgumentFetcher<>(type, annotations, pathVariable, this.matchRef, this.mapping != null && this.mapping.value().length > 0);
+		}
+
+		final RequestAttribute requestAttribute = annos.getAnnotation(RequestAttribute.class);
+		if (requestAttribute != null) {
+			return new RequestAttributeArgumentFetcher<>(type, annotations, requestAttribute);
+		}
+
+		final SessionAttribute sessionAttribute = annos.getAnnotation(SessionAttribute.class);
+		if (sessionAttribute != null) {
+			return new SessionAttributeArgumentFetcher<>(type, annotations, sessionAttribute);
+		}
+
+		final RequestHeader requestHeader = annos.getAnnotation(RequestHeader.class);
+		if (requestHeader != null) {
+			return new RequestHeaderArgumentFetcher<>(type, annotations, requestHeader);
+		}
+
+		final InterceptParam interceptParam = annos.getAnnotation(InterceptParam.class);
+		if (interceptParam != null) {
+			return new NullArgumentFetcher<>(type, annotations);
+		}
+
+		return new InjectorArgumentFetcher<>(type, annotations);
+	}
 
 	/**
 	 * @param mapping The annotation that must be present on each invocation method
 	 * @param clazz The class on witch to call the method
 	 * @param method The method to call
 	 */
-	@SuppressWarnings({ "unchecked", "rawtypes" })
-	public MvcInvocation(ControllerHandler<?> controller, @CheckForNull RequestMapping mapping, InstanceGetter<?> ig, Method method) {
+	public MvcInvocation(final ControllerHandler<?> controller, final @CheckForNull RequestMapping mapping, final Method method) {
 		// Set properties
 		this.controller = controller;
 		this.mapping = mapping;
 		this.method = method;
-		this.ig = ig;
 
 		this.view = Annotations.GetOneTreeRecursive(View.class, method);
 
@@ -121,64 +150,27 @@ public final class MvcInvocation {
 		this.redirects = Annotations.GetOneRecursive(Redirects.class, method.getAnnotations());
 
 		// Transform URL like "/foo-{bar}" into /foo-[^/]+ and registers "bar" as match 1
-		if (this.mapping != null)
+		if (this.mapping != null) {
 			for (String location : this.mapping.value()) {
-				Matcher matcher = search.matcher(location);
-				int n = 1;
+				final Matcher matcher = SEARCH.matcher(location);
+				int pos = 1;
 				while (matcher.find()) {
-					matchRef.put(matcher.group(1), new Integer(n));
-					++n;
+					this.matchRef.put(matcher.group(1), Integer.valueOf(pos));
+					++pos;
 				}
 				location = matcher.replaceAll("([^/]+)");
-				patterns.add(Pattern.compile(location));
+				this.patterns.add(Pattern.compile(location));
 			}
+		}
 
 		// Registers all fetchers
 		// Fetchers are configured in constructor so they are constructed only once
 		// If no fetcher is suitable, then uses the guice fetcher
-		List<TypeLiteral<?>> parameterTypes = ig.getTypeLiteral().getParameterTypes(method);
-		Annotation[][] annotations = method.getParameterAnnotations();
-		fetchers = new ArgumentFetcher<?>[parameterTypes.size()];
+		final List<TypeLiteral<?>> parameterTypes = controller.getTypeLiteral().getParameterTypes(method);
+		final Annotation[][] annotations = method.getParameterAnnotations();
+		this.fetchers = new ArgumentFetcher<?>[parameterTypes.size()];
 		for (int n = 0; n < parameterTypes.size(); ++n) {
-			AnnotatedElement annos = Annotations.fromArray(annotations[n]);
-
-			RequestParam requestParam = annos.getAnnotation(RequestParam.class);
-			if (requestParam != null) {
-				fetchers[n] = new RequestParamArgumentFetcher(parameterTypes.get(n), annotations[n], requestParam);
-				continue ;
-			}
-
-			PathVariable pathVariable = annos.getAnnotation(PathVariable.class);
-			if (pathVariable != null) {
-				fetchers[n] = new PathVariableArgumentFetcher(parameterTypes.get(n), annotations[n], pathVariable, matchRef, this.mapping != null && this.mapping.value().length > 0);
-				continue ;
-			}
-
-			RequestAttribute requestAttribute = annos.getAnnotation(RequestAttribute.class);
-			if (requestAttribute != null) {
-				fetchers[n] = new RequestAttributeArgumentFetcher(parameterTypes.get(n), annotations[n], requestAttribute);
-				continue ;
-			}
-
-			SessionAttribute sessionAttribute = annos.getAnnotation(SessionAttribute.class);
-			if (sessionAttribute != null) {
-				fetchers[n] = new SessionAttributeArgumentFetcher(parameterTypes.get(n), annotations[n], sessionAttribute);
-				continue ;
-			}
-
-			RequestHeader requestHeader = annos.getAnnotation(RequestHeader.class);
-			if (requestHeader != null) {
-				fetchers[n] = new RequestHeaderArgumentFetcher(parameterTypes.get(n), annotations[n], requestHeader);
-				continue ;
-			}
-
-			InterceptParam interceptParam = annos.getAnnotation(InterceptParam.class);
-			if (interceptParam != null) {
-				fetchers[n] = new NullArgumentFetcher(parameterTypes.get(n), annotations[n]);
-				continue ;
-			}
-
-			fetchers[n] = new InjectorArgumentFetcher(parameterTypes.get(n), annotations[n]);
+			this.fetchers[n] = createFetcher(parameterTypes.get(n), annotations[n]);
 		}
 	}
 
@@ -188,66 +180,82 @@ public final class MvcInvocation {
 	 * @param req The request
 	 * @return InvocationInfos with all infos (including confidence) if it can, null if it can't
 	 */
-	public @CheckForNull ControllerInvocationInfos canServe(HttpServletRequest req) {
-		if (this.mapping == null)
+	@SuppressWarnings({"PMD.CyclomaticComplexity", "PMD.NPathComplexity"})
+	public @CheckForNull ControllerInvocationInfos canServe(final HttpServletRequest req) {
+		if (this.mapping == null) {
 			return null;
+		}
 
 		ControllerInvocationInfos ret = new ControllerInvocationInfos(this);
 
 		// Checks if the URL declared in @RequestMapping matches. This is mandatory
-		for (Pattern pattern : patterns) {
-			String p = req.getPathInfo();
-			if (p == null)
-				p = "/";
-			Matcher matcher = pattern.matcher(p);
+		for (final Pattern pattern : this.patterns) {
+			String path = req.getPathInfo();
+			if (path == null) {
+				path = "/";
+			}
+			final Matcher matcher = pattern.matcher(path);
 			if (matcher.matches()) {
 				ret.urlMatch = matcher.toMatchResult();
 				break ;
 			}
 		}
-		if (ret.urlMatch == null)
+		if (ret.urlMatch == null) {
 			return null;
+		}
 
 		// Checks the HTTP Method
 		if (this.mapping.method().length > 0) {
-			RequestMethod requestMethod = RequestMethod.valueOf(req.getMethod());
-			if (Arrays.Contains(mapping.method(), requestMethod))
+			final RequestMethod requestMethod = RequestMethod.valueOf(req.getMethod());
+			if (Arrays.Contains(this.mapping.method(), requestMethod)) {
 				++ret.confidence;
-			else
+			}
+			else {
 				return null;
+			}
 		}
 
 		// Checks request parametes
-		for (String param : mapping.params())
-			if (req.getParameter(param) != null)
+		for (final String param : this.mapping.params()) {
+			if (req.getParameter(param) != null) {
 				++ret.confidence;
-			else
+			}
+			else {
 				return null;
+			}
+		}
 
 		// Checks HTTP headers
-		for (String header : mapping.headers())
-			if (req.getHeader(header) != null)
+		for (final String header : this.mapping.headers()) {
+			if (req.getHeader(header) != null) {
 				++ret.confidence;
-			else
+			}
+			else {
 				return null;
+			}
+		}
 
 		// Checks HTTP header Content-Type
-		if (mapping.consumes().length > 0) {
-			if (Arrays.Contains(mapping.consumes(), req.getContentType()))
+		if (this.mapping.consumes().length > 0) {
+			if (Arrays.Contains(this.mapping.consumes(), req.getContentType())) {
 				++ret.confidence;
-			else
+			}
+			else {
 				return null;
+			}
 		}
 
 		// Checks HTTP header Accept
-		if (mapping.produces().length > 0) {
-			if (req.getHeader("Accept") == null)
+		if (this.mapping.produces().length > 0) {
+			if (req.getHeader("Accept") == null) {
 				return null;
-
-			if (HttpStrings.AcceptContains(req.getHeader("Accept"), mapping.produces()))
+			}
+			if (HttpStrings.AcceptContains(req.getHeader("Accept"), this.mapping.produces())) {
 				++ret.confidence;
-			else
+			}
+			else {
 				return null;
+			}
 		}
 
 		return ret;
@@ -264,15 +272,12 @@ public final class MvcInvocation {
 	 * @throws NoSuchRequestParameterException In case of a parameter asked from request argument or path variable that does not exists
 	 * @throws Throwable Any thing that the method call might have thrown
 	 */
-	public @CheckForNull Object Invoke(
-			HttpServletRequest req,
-			@CheckForNull @PathVariablesMap Map<String, String> pathVariables,
-			Injector injector,
-			CalltimeArgumentFetcher<?>... additionalFetchers
+	public @CheckForNull Object invoke(
+			final HttpServletRequest req,
+			final @PathVariablesMap Map<String, String> pathVariables,
+			final Injector injector,
+			final CalltimeArgumentFetcher<?>... additionalFetchers
 			) throws NoSuchRequestParameterException, Throwable  {
-
-		if (pathVariables == null)
-			pathVariables = PathVariablesProvider._coercePathVariablesMap(new HashMap<String, String>());
 
 		// Pushes path variables to the stack, this permits to have invocations inside invocations
 		injector.getInstance(PathVariablesProvider.class).push(pathVariables);
@@ -281,16 +286,18 @@ public final class MvcInvocation {
 			// Fetches all arguments
 			Object[] params = new Object[this.fetchers.length];
 			Object invocRet = null;
-			for (int n = 0; n < this.fetchers.length; ++n)
+			for (int n = 0; n < this.fetchers.length; ++n) {
 				params[n] = this.fetchers[n].get(req, pathVariables, injector, additionalFetchers);
+			}
 
 			try {
 				// Calls the method
-				Object ret = method.invoke(ig.getInstance(), params);
+				final Object ret = this.method.invoke(this.controller.getInstance(), params);
 
 				// If method did not returned void, gets what it returned
-				if (!method.getReturnType().equals(Void.TYPE) && !method.getReturnType().equals(void.class))
+				if (!this.method.getReturnType().equals(Void.TYPE) && !this.method.getReturnType().equals(void.class)) {
 					invocRet = ret;
+				}
 			}
 			// Catches anything that might be thrown by the method call
 			catch (InvocationTargetException thrown) {
@@ -310,39 +317,39 @@ public final class MvcInvocation {
 	 * Invoke proxy for internal use
 	 */
 	@SuppressWarnings("javadoc")
-	public @CheckForNull Object Invoke(
-			HttpServletRequest req,
-			MatchResult urlMatch,
-			Injector injector,
-			CalltimeArgumentFetcher<?>... additionalFetchers
+	public @CheckForNull Object invoke(
+			final HttpServletRequest req,
+			final MatchResult urlMatch,
+			final Injector injector,
+			final CalltimeArgumentFetcher<?>... additionalFetchers
 			) throws NoSuchRequestParameterException, Throwable {
-		return Invoke(req, PathVariablesProvider.fromMatch(urlMatch, matchRef), injector, additionalFetchers);
+		return invoke(req, PathVariablesProvider.fromMatch(urlMatch, this.matchRef), injector, additionalFetchers);
 	}
 
 	/**
 	 * @return The invocation's method
 	 */
 	public Method getMethod() {
-		return method;
+		return this.method;
 	}
 
 	public ControllerHandler<?> getController() {
-		return controller;
+		return this.controller;
 	}
 
 	public @CheckForNull View getView() {
-		return view;
+		return this.view;
 	}
 
 	public @CheckForNull Writes getWrites() {
-		return writes;
+		return this.writes;
 	}
 
 	public @CheckForNull HttpError getHttpError() {
-		return httpError;
+		return this.httpError;
 	}
 
 	public @CheckForNull Redirects getRedirects() {
-		return redirects;
+		return this.redirects;
 	}
 }
